--- a/powerful-core/pom.xml
+++ b/powerful-core/pom.xml
@@ -10,7 +10,7 @@
 
   <properties>
     <java.version>1.8</java.version>
-    <dubbo.version>2.6.2</dubbo.version>
+    <dubbo.version>2.6.11</dubbo.version>
   </properties>
 
   <dependencies>
@@ -88,6 +88,12 @@
       </exclusions>
     </dependency>
     <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-all</artifactId>
+      <version>4.1.68.Final</version>
+    </dependency>
+
+    <dependency>
       <groupId>net.devh</groupId>
       <artifactId>grpc-client-spring-boot-autoconfigure</artifactId>
       <version>2.4.0.RELEASE</version>
@@ -103,6 +109,11 @@
       <groupId>com.flipkart.zjsonpatch</groupId>
       <artifactId>zjsonpatch</artifactId>
       <version>0.4.11</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-aop</artifactId>
+      <version>2.1.6.RELEASE</version>
     </dependency>
   </dependencies>
 
